@@ -75,6 +75,11 @@
         <enabled>false</enabled>
       </snapshots>
     </repository>
+    <repository>
+      <id>jvnet-nexus-staging</id>
+      <url>http://maven.java.net/content/repositories/staging/</url>
+      <layout>default</layout>
+    </repository>
   </repositories>
 
   <issueManagement>
@@ -93,6 +98,7 @@
       <subscribe>https://launchpad.net/~dhis2-devs</subscribe>
     </mailingList>
   </mailingLists>
+
   <reporting>
     <plugins>
       <plugin>
@@ -130,6 +136,13 @@
               <argLine>-Xmx1024m</argLine>
               <excludedGroups>org.hisp.dhis.IntegrationTest</excludedGroups>
             </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm</artifactId>
+                <version>6.2</version>
+              </dependency>
+            </dependencies>
           </plugin>
         </plugins>
       </build>
@@ -147,6 +160,13 @@
               <argLine>-Xmx1024m</argLine>
               <groups>org.hisp.dhis.IntegrationTest</groups>
             </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm</artifactId>
+                <version>6.2</version>
+              </dependency>
+            </dependencies>
           </plugin>
         </plugins>
       </build>
@@ -211,23 +231,44 @@
   <build>
     <pluginManagement>
       <plugins>
-
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>3.8.1</version>
           <configuration>
+            <!--
+            <release>11</release>
+            -->
             <source>1.8</source>
             <target>1.8</target>
+            <encoding>${project.build.sourceEncoding}</encoding>
+          </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>org.ow2.asm</groupId>
+              <artifactId>asm</artifactId>
+              <version>6.2</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>3.1.0</version>
+          <configuration>
             <encoding>${project.build.sourceEncoding}</encoding>
           </configuration>
         </plugin>
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>2.5</version>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.22.2</version>
           <configuration>
+            <argLine>
+              --illegal-access=permit
+            </argLine>
             <encoding>${project.build.sourceEncoding}</encoding>
           </configuration>
         </plugin>
@@ -346,9 +387,37 @@
             </execution>
           </executions>
         </plugin>
+        <plugin>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok-maven-plugin</artifactId>
+          <version>1.18.10.0</version>
+        </plugin>
       </plugins>
 
     </pluginManagement>
+
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>1.4.1</version>
+        <executions>
+          <execution>
+            <id>enforce-maven</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <requireMavenVersion>
+                  <version>3.0.5</version>
+                </requireMavenVersion>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 
   <dependencyManagement>
@@ -483,6 +552,11 @@
         <version>${project.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.hisp.dhis</groupId>
+        <artifactId>dhis-support-audit</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.hisp.dhis.rules</groupId>
         <artifactId>rule-engine</artifactId>
         <version>1.0.5.1-SNAPSHOT</version>
@@ -557,7 +631,7 @@
       <dependency>
         <groupId>org.springframework.hateoas</groupId>
         <artifactId>spring-hateoas</artifactId>
-        <version>1.0.0.RELEASE</version>
+        <version>1.0.1.RELEASE</version>
       </dependency>
       <dependency>
         <groupId>org.springframework.retry</groupId>
@@ -753,6 +827,10 @@
             <groupId>org.apache.struts</groupId>
             <artifactId>struts-taglib</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
@@ -889,22 +967,6 @@
         <artifactId>commons-email</artifactId>
         <version>1.5</version>
       </dependency>
-      <dependency>
-        <groupId>commons-logging</groupId>
-        <artifactId>commons-logging</artifactId>
-        <version>1.2</version>
-        <scope>compile</scope>
-        <exclusions>
-          <exclusion>
-            <groupId>avalon-framework</groupId>
-            <artifactId>avalon-framework</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>logkit</groupId>
-            <artifactId>logkit</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
 
       <!--DBMS -->
       <dependency>
@@ -934,11 +996,6 @@
         <version>${hibernate.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.bedatadriven</groupId>
-        <artifactId>jackson-datatype-jts</artifactId>
-        <version>2.4</version>
-      </dependency>
-      <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-validator</artifactId>
         <version>${hibernate-validator.version}</version>
@@ -960,20 +1017,26 @@
         <artifactId>javassist</artifactId>
         <version>${javassist.version}</version>
       </dependency>
+      <!-- logging -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-slf4j-impl</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${slf4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-log4j12</artifactId>
-        <version>${slf4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>log4j</groupId>
-        <artifactId>log4j</artifactId>
-        <version>1.2.17</version>
       </dependency>
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
@@ -983,7 +1046,7 @@
       <dependency>
         <groupId>com.mchange</groupId>
         <artifactId>c3p0</artifactId>
-        <version>0.9.5.4</version>
+        <version>0.9.5.5</version>
       </dependency>
       <dependency>
         <groupId>org.postgresql</groupId>
@@ -1075,11 +1138,6 @@
         <artifactId>htmllexer</artifactId>
         <version>2.1</version>
       </dependency>
-      <dependency>
-        <groupId>net.sourceforge.jexcelapi</groupId>
-        <artifactId>jxl</artifactId>
-        <version>2.6.12</version>
-      </dependency>
 
       <!-- GIS -->
       <dependency>
@@ -1145,6 +1203,11 @@
         <artifactId>classmate</artifactId>
         <version>1.3.2</version>
       </dependency>
+      <dependency>
+        <groupId>com.bedatadriven</groupId>
+        <artifactId>jackson-datatype-jts</artifactId>
+        <version>2.4</version>
+      </dependency>
 
       <!-- GeoTools -->
       <dependency>
@@ -1193,12 +1256,33 @@
       <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
-        <version>2.2.6</version>
+        <version>2.4.0-b180830.0359</version>
       </dependency>
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
-        <version>2.2.6</version>
+        <version>2.4.0-b180830.0438</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.3.2</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.xml.ws</groupId>
+        <artifactId>jaxws-api</artifactId>
+        <version>2.4.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-osgi</artifactId>
+        <version>2.4.0-b180830.0438</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.ws</groupId>
+        <artifactId>jaxws-ri</artifactId>
+        <version>2.3.2</version>
+        <type>pom</type>
       </dependency>
 
       <!-- AMQP -->
@@ -1353,11 +1437,6 @@
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>com.jcraft</groupId>
-        <artifactId>jzlib</artifactId>
-        <version>1.1.3</version>
-      </dependency>
-      <dependency>
         <groupId>org.jboss.logging</groupId>
         <artifactId>jboss-logging</artifactId>
         <version>3.4.1.Final</version>
@@ -1399,7 +1478,7 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>2.23.4</version>
+        <version>3.2.4</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -1425,6 +1504,19 @@
         <artifactId>random-beans</artifactId>
         <version>3.7.0</version>
       </dependency>
+      <dependency>
+        <groupId>com.scalified</groupId>
+        <artifactId>tree</artifactId>
+        <version>0.2.5</version>
+      </dependency>
+
+      <!-- Lombok -->
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.10</version>
+        <scope>provided</scope>
+      </dependency>
 
       <!-- application monitoring -->
       <dependency>
@@ -1432,7 +1524,6 @@
         <artifactId>micrometer-spring-legacy</artifactId>
         <version>1.3.0</version>
       </dependency>
-
       <dependency>
         <groupId>io.micrometer</groupId>
         <artifactId>micrometer-registry-prometheus</artifactId>
@@ -1444,9 +1535,10 @@
   <properties>
     <rootDir></rootDir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring.version>5.2.0.RELEASE</spring.version>
-    <spring-security.version>5.2.0.RELEASE</spring-security.version>
-    <spring-security-oauth2.version>2.3.6.RELEASE</spring-security-oauth2.version>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <spring.version>5.2.3.RELEASE</spring.version>
+    <spring-security.version>5.2.1.RELEASE</spring-security.version>
+    <spring-security-oauth2.version>2.4.0.RELEASE</spring-security-oauth2.version>
     <spring-session-data-redis.version>2.2.0.RELEASE</spring-session-data-redis.version>
     <lettuce.version>5.2.0.RELEASE</lettuce.version>
     <spring-data-redis.version>2.2.0.RELEASE</spring-data-redis.version>
@@ -1456,16 +1548,19 @@
     <jclouds.version>2.2.0</jclouds.version>
     <antlr.version>4.7.2</antlr.version>
     <!-- Keep in sync with Hibernate -->
-    <javassist.version>3.20.0-GA</javassist.version>
+    <javassist.version>3.23.1-GA</javassist.version>
     <!-- unit test dependencies-->
     <powermock.version>2.0.4</powermock.version>
-    <jackson.version>2.10.0</jackson.version>
-    <slf4j.version>1.7.5</slf4j.version>
+    <jackson.version>2.10.1</jackson.version>
+    <log4j.version>2.13.0</log4j.version>
+    <slf4j.version>1.7.25</slf4j.version>
     <geotools.version>18.0</geotools.version>
     <jasperreports.version>6.3.1</jasperreports.version>
     <jacoco.version>0.8.2</jacoco.version>
     <artemis.version>2.6.4</artemis.version>
     <snippetsDirectory>${project.build.directory}/generated-snippets</snippetsDirectory>
     <sonar.jacoco.reportPath>${rootDir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+    <sonar.organization>dhis2</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 </project>
